--- a/src/Components/Main/Question/QuestionTypes/GapText/GapText.css
+++ b/src/Components/Main/Question/QuestionTypes/GapText/GapText.css
@@ -60,6 +60,11 @@
   padding: 0px 10px;
 }
 
+.question-gap-text ul li,
+.question-gap-text li li{
+  list-style-position: inside;
+}
+
 .question-gap-text .input-enabled:focus, .question-gap-text .input-enabled:active{
   box-shadow: 0 0 0 1px var(--custom-prime-color);
 }
@@ -92,6 +97,11 @@
 
 .answer-false .correction-gap-text input{ 
   box-shadow: 0 0 0 1px rgb(194, 149, 144);
+}
+
+.correction-gap-text ul li,
+.correction-gap-text li li{
+  list-style-position: inside;
 }
 
 /* Media Query for phones */
